--- a/index.html
+++ b/index.html
@@ -1,205 +1,79 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style/index.css">
 
-    <link rel="stylesheet" type="text/css" href="style/common.css">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="New freshman : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>New freshman</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/sadnessyetao/new_freshman">View on GitHub</a>
+
+          <h1 id="project_title">New freshman</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/sadnessyetao/new_freshman/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/sadnessyetao/new_freshman/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">New freshman maintained by <a href="https://github.com/sadnessyetao">sadnessyetao</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
-</head>
-<body>
-    <div class="header">
-        <div class="logo">
-            <div class="logoWrapper">
-               <a href="./" class="homelink" title="首页"></a>
-               <ul class="nav">
-                        <li class="default"><a href="" class="controlSpace">首页</a></li>
-                        <li><a href="">新生知多D</a></li>
-                        <li><a href="">学习贴士</a></li>
-                        <li><a href="">校园生活</a></li>
-                        <li><a href="">最新资讯</a></li>
-                        <li class="special_li"><a class="special_a" href="">大学城</a>
-                            <ul class="special_down">
-                                <li><a href="">龙洞</a></li>
-                                <li><a href="">东风路</a></li>
-                            </ul>
-                        </li>
-                    </a>
-               </ul> 
-            </div>
-            <div class="line"></div>    
-        </div>
-        <div class="banner">
-            <div class="left_banner">
-                <p class="odd">2014.6.8高考</p>
-                <p class="even">2014.6月末 填报志愿</p>
-                <p class="odd">2014.7月中旬 收到录取通知书</p>
-                <p class="even">2014.9.1 我们在广工大等你</p>
-            </div>    
-            <div class="right_banner">
-                <div>
-                    <a href="">最新资讯</a>
-                    <span><a href="">HOT NEWS</a></span>
-                    <span class="special_more"><a href="">MORE</a></span>
-                </div>
-                <p>
-                    <a href="">广工大数字中心新生群，欢迎各位新生加入</a>
-                    <span class="icon_one">1</span>
-                    <span class="date1"><a href="">发布时间:2014.3.15</a></span>
-                </p>
-                 <p><a href="">
-                    新生篇之——>入学档案&amp;户口注意的事项</a>
-                    <span class="icon_two">2</span>
-                    <span class="date1"><a href="">发布时间:2014.3.15</a></span>
-                </p>
-                 <p>
-                    <a href="">2013年广东工业大学新生迎新日程表</a>
-                    <span class="icon_three">3</span>
-                    <span class="date1"><a href="">发布时间:2014.3.15</a></span>
-                </p>
-                 <p>
-                    <a href="">新生篇之——>入学学费贷款需知</a>
-                    <span class="date1"><a href="">发布时间:2014.3.15</a></span>
-                </p>
-                 <p>
-                    <a href="">广工大数字中心新生群，欢迎各位新生加</a>
-                    <span class="date1"><a href="">发布时间:2014.3.15</a></span>
-                </p>
-                 <p class="special_p">
-                    <a href="">新生篇之——>入学学费贷款需知</a>
-                    <span class="date1"><a href="">发布时间:2014.3.15</a></span>
-                </p>
-            </div>
-            <div class="bo_banner">
-                <img class="scroll" id="goBottom" src="images/scroll.png">
-                <img class="dot" src="images/dot_red.png">
-                <img class="dot" src="images/dot.png">
-                <img class="dot" src="images/dot.png">
-            </div>
-        </div>
-        <ul class="gallery">
-                <li><img src="images/album_one.jpg"></li>
-                <li><img src="images/album_two.jpg"></li>
-                <li><img src="images/album_three.jpg"></li>
-        </ul>
 
-        </div>    
-
-    </div>
-    <div class="mainmenu">
-        <div class="mainmenu_left_menu">
-            <a href="" class="mainmenu_title">
-                新生知多D
-            </a>
-            <div>
-                <ol>
-                    <li ><span class="first">1</span><a href="" >&nbsp;&nbsp;广工大数字中心新生群&nbsp;&nbsp;欢迎各位新生加入</a></li>
-                    <li><span class="second">2</span><a href="">&nbsp;&nbsp;2013年广东工业大学新生迎新日程表入</a></li>
-                    <li><span class="third">3</span><a href="">&nbsp;&nbsp;【精】图书馆必知</a></li>
-                    <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;新生篇之>入学学费贷款须知</a></li>
-                    <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;【精】图书馆必知</a></li></li>
-                    <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;新生篇之>入学学费贷款须知</a></li>
-                    <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;2013年广东工业大学新生迎新日程表入</a></li>
-                    <li><span>&nbsp;</span><a href="" >&nbsp;&nbsp;广工大数字中心新生群&nbsp;&nbsp;欢迎各位新生加入</a></li>
-                </ol>
-            </div>
-        </div>
-        <div class="mainmenu_center_menu">
-            <a href="" class="mainmenu_title">
-                学习贴士
-            </a>
-            <ol>
-                    <li ><span class="first">1</span><a href="" >&nbsp;&nbsp;广工大数字中心新生群&nbsp;&nbsp;欢迎各位新生加入</a></li>
-                    <li><span class="second">2</span><a href="">&nbsp;&nbsp;2013年广东工业大学新生迎新日程表入</a></li>
-                    <li ><span class="third">3</span><a href="">&nbsp;&nbsp;【精】图书馆必知</a></li>
-                    <ul>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;新生篇之>入学学费贷款须知</a></li>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;【精】图书馆必知</a></li></li>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;新生篇之>入学学费贷款须知</a></li>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;2013年广东工业大学新生迎新日程表入</a></li>
-                        <li><span>&nbsp;</span><a href="" >&nbsp;&nbsp;广工大数字中心新生群&nbsp;&nbsp;欢迎各位新生加入</a></li>
-                    </ul>
-                </ol>
-        </div>
-        <div class="mainmenu_right_menu">
-            <a href="" class="mainmenu_title">
-                校园生活
-            </a>
-            <ol>
-                    <li ><span class="first">1</span><a href="" >&nbsp;&nbsp;广工大数字中心新生群&nbsp;&nbsp;欢迎各位新生加入</a></li></li>
-                    <li><span class="second">2</span><a href="">&nbsp;&nbsp;2013年广东工业大学新生迎新日程表入</a></li></li>
-                    <li ><span class="third">3</span><a href="">&nbsp;&nbsp;【精】图书馆必知</a></li></li>
-                    <ul>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;新生篇之>入学学费贷款须知</a></li></li>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;【精】图书馆必知</a></li></li>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;新生篇之>入学学费贷款须知</a></li></li>
-                        <li><span>&nbsp;</span><a href="">&nbsp;&nbsp;2013年广东工业大学新生迎新日程表入</a></li></li>
-                        <li><span>&nbsp;</span><a href="" >&nbsp;&nbsp;广工大数字中心新生群&nbsp;&nbsp;欢迎各位新生加入</a></li></li>
-                    </ul>
-                </ol>
-        </div>
-    </div>
-    <div class="photo">
-        <a href=""><img class="photo_download" src="images/13.png" alt=""></a>
-    </div>
-    <div class="picture">
-     <div class="picture1">
-       <img class="gray_pic" src="images/photoOne.jpg" >
-       <img class="gray_pic" src="images/photoTwo.jpg" >
-       <img class="gray_pic" src="images/photoThree.jpg" >
-     </div>
-     <div class="picture2">
-       <img class="gray_pic" src="images/photoOne.jpg" >
-       <img class="gray_pic" src="images/photoTwo.jpg" >
-       <img class="gray_pic" src="images/photoThree.jpg" >
-     </div>
-     <div class="picture3">
-       <img class="gray_pic" src="images/photoOne.jpg" >
-       <img class="gray_pic" src="images/photoTwo.jpg" >
-       <img class="gray_pic" src="images/photoThree.jpg" >
-       </div>
-    </div>
-    <br>
-  <div id="footer">
-        <div class="footer_contain">
-            <div class="footer_contain_design">
-                <h1>
-                    <span>广东工业大学</span>
-                </h1>
-                <ul>
-                    <li>
-                        <a href="http://www.gdut.edu.cn/">广东工业大学主页</a>
-                    </li>
-                    <li>
-                        <a href="http://library.gdut.edu.cn/">广东工业大学图书馆</a>
-                    </li>
-                    <li>
-                        <a href="http://jwgldx.gdut.edu.cn/(vjnbwr45nvgbiz55kqg1w1et)/default2.aspx">广东工业大学教务管理系统</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer_contain_design">
-                <h1>
-                    <span>维生数工作室</span>
-                </h1>
-                <ul>
-                    <li>
-                        <a href="http://vtmer.com">维生数主页</a>
-                    </li>
-                    <li>
-                        <a href="http://blog.vtmer.com">维生数BLOG</a>
-                    </li>
-                    <li>
-                        <a href="http://weibo.com/vtmer">维生数微博</a>
-                    </li>
-                </ul>
-            </div>
-        </div>  
-         <p class="footer_contain_designer">Copyright &copy; VTMER 维生数工作室版权所有 </p>
-    </div>
-
-</body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="scripts/index.js"></script>
-
+  </body>
 </html>
